brain/sources/prod-metadata/objects/Vendor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Vendor&apos;s Email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>