brain/sources/prod-metadata/objects/Vendor__c/fields/In_House_Proxy__c.field-meta.xml
<CustomField>
    <fullName>In_House_Proxy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In House Proxy</label>
    <type>Checkbox</type>
</CustomField>