brain/sources/prod-metadata/objects/Vendor__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Vendor&apos;s Phone Number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>