brain/sources/prod-metadata/objects/Vendor__c/fields/Vendor_Parent__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor (Parent)</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipName>vendors</relationshipName>
    <type>Lookup</type>
</CustomField>